--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.2",
     "babel-plugin-macros": "^3.1.0",
     "framer-motion": "^6.3.3",
+    "gsap": "^3.10.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
