--- a/web.config
+++ b/web.config
@@ -2,6 +2,8 @@
 <configuration>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
+    <compilation debug="true" targetFramework="4.0" />
+    <httpRuntime targetFramework="4.0" />
     <rewrite>
       <rules>
         <rule name="React Routes" stopProcessing="true">
