--- a/public/web.config
+++ b/public/web.config
@@ -2,6 +2,12 @@
 <configuration>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
+    <compilation debug="true" targetFramework="4.0" />
+    <httpRuntime targetFramework="4.0" />
+    <staticContent>
+      <remove fileExtension=".json" />
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+    </staticContent>
     <rewrite>
       <rules>
         <rule name="React Routes" stopProcessing="true">
