--- a/web.config
+++ b/web.config
@@ -4,6 +4,10 @@
     <modules runAllManagedModulesForAllRequests="true" />
     <compilation debug="true" targetFramework="4.0" />
     <httpRuntime targetFramework="4.0" />
+    <staticContent>
+      <remove fileExtension=".json" />
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+    </staticContent>
     <rewrite>
       <rules>
         <rule name="React Routes" stopProcessing="true">
